
pysmb-1.1.12, 21 Sep 2014
=========================

- Fix syntax error for python3 NBNSProtocol implementation
- Fix bug in SMB1 implementation which results in access denied errors with Samba 3.0 

pysmb-1.1.11, 13 Sep 2014
=========================

- Add support for unicode characters in domain, username and password.
- Add storeFileFromOffset method to SMB API
- Fix bug in getAttributes implementation for SMB1
- Fix bug for NMB which uses broadcast flag for unicast queries
- Update the Tree Connect Andx request implementation to MS-SMB 2.2.4.7.1 extensions

pysmb-1.1.10, 29 Jun 2014
=========================

- Add getAttributes() method to SMBConnection and SMBProtocolFactory class
- Add isReadOnly property to SharedFile class

pysmb-1.1.9, 1 Jun 2014
=======================

- Add support for domains in smb:// URLs
- Fix a bug which fails to test for the correct GSS security provider OID values

pysmb-1.1.8, 21 Dec 2013
========================

- Fix a bug in storeFile() method when the destination file is not overwritten if
  it exists in SMB1 communication
- Fix a SMB1 authentication problem when extended negotation is not carried out
  because the remote server has specified its support for extended security in the
  payload, instead of in the message flags2.

pysmb-1.1.7, 27 Sep 2013
========================

- Improve listShares() function which can fail with the listing response is
  separated into multiple SMB packets for large number of shares.
- Fix bug in python3 implementation where session connection can fail when
  remote server supports message signing.

pysmb-1.1.6, 16 Aug 2013
========================

- Fix bug where the status of the SMB_COM_NEGOTIATE reply is not checked for error
  before allowing further processing.

pysmb-1.1.5, 19 June 2013
=========================

- Adds support for Direct hosting of SMB over TCP/IP (TCP port: 445)

pysmb-1.1.4, 31 May 2013
========================
