@@ -1225,15 +1225,15 @@ c8 4f 32 4b 70 16 d3 01 12 78 5a 47 bf 6e e1 88
             old_path = old_path[1:]
         if old_path.endswith('\\'):
             old_path = old_path[:-1]
-
+            
         def sendCreate(tid):
             create_context_data = binascii.unhexlify("""
-20 00 00 00 10 00 04 00 00 00 18 00 08 00 00 00
-4d 78 41 63 00 00 00 00 00 00 00 00 ff 01 1f 00
-00 00 00 00 10 00 04 00 00 00 18 00 20 00 00 00
-51 46 69 64 00 00 00 00 14 e7 01 00 00 00 50 00
-30 e0 4c 0b 80 fa ff ff 00 00 00 00 00 00 00 00
-00 00 00 00 00 00 00 00
+28 00 00 00 10 00 04 00 00 00 18 00 10 00 00 00
+44 48 6e 51 00 00 00 00 00 00 00 00 00 00 00 00
+00 00 00 00 00 00 00 00 18 00 00 00 10 00 04 00
+00 00 18 00 00 00 00 00 4d 78 41 63 00 00 00 00
+00 00 00 00 10 00 04 00 00 00 18 00 00 00 00 00
+51 46 69 64 00 00 00 00
 """.replace(' ', '').replace('\n', ''))
             m = SMB2Message(SMB2CreateRequest(old_path,
                                               file_attributes = 0,
